# SDL2-Template

./: CMakeLists.txt  README.md  build.sh
src/: main.cpp
